apps/oracle-cluster/user-apps/ai/open-webui/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: ai
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  serviceName: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:latest@sha256:b80a96e14bb15ea79aec96fbdad4aeab6b3ee7b61520d83b5dbc8c4f47d433a9
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /app/backend/data
          name: open-webui-volume
      volumes:
      - name: open-webui-volume
        persistentVolumeClaim:
          claimName: open-webui-data-pvc
